plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'com.github.spotbugs' version '6.0.0-beta.3'
}

mainClassName = 'org.rsa.Bot'
version '1.0'
sourceCompatibility = JavaVersion.VERSION_17

repositories {
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'

    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.jsoup:jsoup:1.17.1'
    implementation 'com.google.guava:guava:33.0.0-jre'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'

    implementation platform('software.amazon.awssdk:bom:2.20.135')

    implementation 'software.amazon.awssdk:dynamodb'
    implementation 'software.amazon.awssdk:dynamodb-enhanced'
    implementation 'software.amazon.awssdk:secretsmanager'

    implementation 'net.dv8tion:JDA:5.0.0-beta.13'
    implementation 'ch.qos.logback:logback-classic:1.2.9'

    testImplementation 'org.mockito:mockito-core:5.5.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
}

test {
    useJUnitPlatform()
}

compileJava.options.encoding = 'UTF-8'